--- a/aiworkoutgen/core/templates/core/history.html
+++ b/aiworkoutgen/core/templates/core/history.html
@@ -35,6 +35,7 @@
 
         <ul class="space-y-6">
             {% for workout in workouts %}
+            
             <li class="bg-white rounded-lg shadow-md p-6 border-l-4 border-blue-500">
                 <!-- Workout Header -->
                 <div x-data="{ open: false }">
@@ -65,11 +66,21 @@
                                     <p>Target Area: {{ exercise.target_area }}</p>
                                     <p>Equipment Needed: {{ exercise.equipment_needed }}</p>
                                 </li>
+    
                                 {% endfor %}
                             </ul>
                         </div>
+                            
+
                         {% endfor %}
+                                 <!--delete button-->
+                       
+                                 <div class="flex justify-center">
+                                    <a href = "{% url 'delete_workout' pk=workout.pk %}" class="bg-gray-900 hover:bg-gray-700 text-white font-semibold py-2 px-5 rounded-md shadow-lg transition duration-200">Delete Workout</a>
+                                        </div>
+
                     </div>
+                   
                 </div>
             </li>
             {% empty %}
