--- a/aiworkoutgen/core/templates/core/history.html
+++ b/aiworkoutgen/core/templates/core/history.html
@@ -12,15 +12,15 @@
     <!-- Navbar Start -->
     <nav class="bg-white py-4 shadow-md fixed top-0 w-full z-10">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <h1 class="text-2xl font-bold text-gray-900">AI Workout Generator</h1>
+            <a href="{% url 'home' %}"><h1 class="text-2xl font-bold text-gray-900">AI Workout Generator</h1></a>
             <div class="flex space-x-4 items-center">
-                <a href="{% url 'home' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Home</a>
-                <a href="{% url 'history' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">History</a>
+                
                 {% if user.is_authenticated %}
-                <a href="#" class="text-gray-600 hover:text-blue-500 transition duration-300">Logout</a>
+                <a href="{% url 'logout' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Logout</a>
                 {% else %}
                 <a href="{% url 'login' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Login</a>
                 {% endif %}
+                <a href="{% url 'history' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">History</a>
                 <button id="theme-toggle" class="text-gray-600 hover:text-blue-500 transition duration-300">
                     Toggle Theme
                 </button>
@@ -90,7 +90,7 @@
     </div>
 
     <!-- Footer Start -->
-    <footer class="bg-gray-800 text-gray-400 py-6 mt-10">
+    <footer class="bg-gray-800 text-gray-400 py-6 mt-10 fixed bottom-0 w-full">
         <div class="container mx-auto flex justify-between items-center px-6">
             <p> Application Development: AI Workout Generator</p>
             <div class="flex space-x-4">
@@ -112,7 +112,25 @@
             body.classList.toggle('text-gray-100');
             body.classList.toggle('bg-gray-100');
             body.classList.toggle('text-gray-800');
+
+            if (document.body.classList.contains('bg-gray-900')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
         }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedTheme = localStorage.getItem('theme');
+
+            if (savedTheme === 'dark') {
+                document.body.classList.add('bg-gray-900', 'text-gray-100');
+                document.body.classList.remove('bg-gray-100', 'text-gray-800');
+            } else {
+                document.body.classList.add('bg-gray-100', 'text-gray-800');
+                document.body.classList.remove('bg-gray-900', 'text-gray-100');
+            }
+        });
 
         themeToggle.addEventListener('click', toggleTheme);
     </script>
