Changed the home page so you cannot gen a workout without being a user, removed theme

--- a/aiworkoutgen/core/templates/core/history.html
+++ b/aiworkoutgen/core/templates/core/history.html
@@ -21,9 +21,9 @@
                 <a href="{% url 'login' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Login</a>
                 {% endif %}
                 <a href="{% url 'history' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">History</a>
-                <button id="theme-toggle" class="text-gray-600 hover:text-blue-500 transition duration-300">
+                <!--<button id="theme-toggle" class="text-gray-600 hover:text-red-500 transition duration-300">
                     Toggle Theme
-                </button>
+                </button>-->
             </div>
         </div>
     </nav>
@@ -103,7 +103,7 @@
     <!-- Footer End -->
 
     <!-- JavaScript for Theme Toggle -->
-    <script>
+    <!--<script>
         const themeToggle = document.getElementById('theme-toggle');
         const body = document.body;
 
@@ -133,6 +133,6 @@
         });
 
         themeToggle.addEventListener('click', toggleTheme);
-    </script>
+    </script>-->
 </body>
 </html>
