--- a/aiworkoutgen/core/templates/core/login.html
+++ b/aiworkoutgen/core/templates/core/login.html
@@ -16,9 +16,9 @@
             <div class="flex space-x-4 items-center">
                 <a href="{% url 'home' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Home</a>
                 <a href="{% url 'signup' %}" class="text-gray-600 hover:text-blue-500 transition duration-300">Signup</a>
-                <button id="theme-toggle" class="text-gray-600 hover:text-blue-500 transition duration-300">
+                <!--<button id="theme-toggle" class="text-gray-600 hover:text-red-500 transition duration-300">
                     Toggle Theme
-                </button>
+                </button>-->
             </div>
         </div>
     </nav>
@@ -70,7 +70,7 @@
         </div>
 </footer>
     <!-- JavaScript for Theme Toggle -->
-    <script>
+    <!--<script>
         const themeToggle = document.getElementById('theme-toggle');
         const body = document.body;
 
@@ -108,6 +108,6 @@
         });
         // Event listener for the theme toggle button
         themeToggle.addEventListener('click', toggleTheme);
-    </script>
+    </script>-->
 </body>
 </html>
