--- a/aiworkoutgen/core/templates/core/history.html
+++ b/aiworkoutgen/core/templates/core/history.html
@@ -12,7 +12,7 @@
     <!-- Navbar Start -->
     <nav class="bg-white py-4 shadow-md fixed top-0 w-full z-10">
         <div class="container mx-auto flex justify-between items-center px-6">
-            <a href="{% url 'home' %}"><h1 class="text-2xl font-bold text-gray-900">AI Workout Generator</h1></a>
+            <a href="{% url 'home' %}"><h1 class="text-2xl font-bold text-gray-900 hover:text-blue-500">AI Workout Generator</h1></a>
             <div class="flex space-x-4 items-center">
                 
                 {% if user.is_authenticated %}
